# FairTaskAllocation

./: .gitignore  README.md  settings.gradle.kts  tests.sh
app/: build.gradle.kts  model.lp
app/data/: results.db
app/data/instances/instance_5_250/: instance_5_250_1.txt  instance_5_250_10.txt  instance_5_250_11.txt  instance_5_250_12.txt  instance_5_250_13.txt  instance_5_250_14.txt  instance_5_250_15.txt  instance_5_250_16.txt  instance_5_250_17.txt  instance_5_250_18.txt  instance_5_250_19.txt  instance_5_250_2.txt  instance_5_250_20.txt  instance_5_250_21.txt  instance_5_250_22.txt  instance_5_250_23.txt  instance_5_250_24.txt  instance_5_250_25.txt  instance_5_250_26.txt  instance_5_250_27.txt  instance_5_250_28.txt  instance_5_250_29.txt  instance_5_250_3.txt  instance_5_250_30.txt  instance_5_250_31.txt  instance_5_250_32.txt  instance_5_250_33.txt  instance_5_250_34.txt  instance_5_250_35.txt  instance_5_250_36.txt  instance_5_250_37.txt  instance_5_250_38.txt  instance_5_250_39.txt  instance_5_250_4.txt  instance_5_250_40.txt  instance_5_250_41.txt  instance_5_250_42.txt  instance_5_250_43.txt  instance_5_250_44.txt  instance_5_250_45.txt  (+10 more)
app/data/results/: COV_instance_10_500_1.csv  COV_instance_10_500_2.csv  COV_instance_10_500_3.csv  COV_instance_10_500_4.csv  COV_instance_10_500_5.csv  COV_instance_5_250_1.csv  computationTime_instance_5_250.csv  paretoFront_instance_5_250_1.csv
app/data/results/instance_5_250/: instance_5_250_1-p-10-fc-10.json  instance_5_250_1-p-10-fc-20.json  (+248 more)
app/readResults/: plots.py  pyproject.toml  queries.py  update_db.py
(+12 files in other folders)
